fixed spacing issues

--- a/src/App.css
+++ b/src/App.css
@@ -31,11 +31,13 @@
   width: 100%;
   flex-basis: auto;
 }
+
 .WelcomeWrapper {
   margin-top: 10vh;
   width: 100%;
   position: relative;
 }
+
 .Welcome {
   position: absolute;
   width: 100%;
@@ -59,9 +61,9 @@
 }
 
 .Tagline {
+  padding-top: 24vh;
   text-align: center;
   width: 700px;
-  margin-top: 25vh;
   font-family: "Baskerville";
   font-size: 25px;
   color: #0c3566;
@@ -95,6 +97,7 @@
   text-decoration: none;
   display: flex;
   flex-direction: column;
+  flex-basis: auto;
   align-items: center;
 }
 
@@ -122,6 +125,7 @@
   height: 10vh;
   width: 100%;
   display: flex;
+  flex-basis: auto;
   color: #ffefd5;
   font-size: 20px;
 }
@@ -138,6 +142,7 @@
 .FooterElement {
   flex-grow: 1;
   display: flex;
+  flex-basis: auto;
   justify-content: space-between;
   padding: 20px;
 }
@@ -170,11 +175,13 @@
   font-size: 10px;
   display: flex;
   flex-direction: column;
+  flex-basis: auto;
 }
 
 .ContactForm{
   display: flex;
   flex-direction: column;
+  flex-basis: auto;
 }
 
 .DesignsMedia{
